# nanoGPT

./: CachedDataLoader.py  IrrelevantChecker.py  data_worker_module.py  dataset_loading_parallel_rus.ipynb  dataset_loading_prefetch.py  fftt.ipynb  model.py  pyproject.toml  rwkv.py  sample.py  sample_twitter.py  standalone_hyena.py  train.ipynb  train.py
config/: eval_gpt2_lora.py  finetune_shakespeare.py  finetune_twitter_financial.py
data/twitter_financial/: parse_csv.py  prepare.py  readme.md  train_data.csv
