[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Anton Sokolchenko <wsevendays@gmail.com>"]
license = "private"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
psutil = "^5.9.4"
# pip install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl"}
python-telegram-bot = "^13.15"
accelerate = "^0.15.0"
bitsandbytes = "^0.35.4"
jupyter = "^1.0.0"
diffusers = "^0.11.1"
cython = "^0.29.32"
taming-transformers = "^0.0.1"
pandas = "^1.5.2"
transformers = "^4.25.1"
deepspeed = "^0.7.7"
huggingface-hub = "^0.11.1"
timm = "0.4.12"
spacy = "^3.5.0"
nltk = "^3.8.1"
sentencepiece = "^0.1.97"
happytransformer = "^2.4.1"
jupyterlab = "^3.6.1"
rwkvstic = "^0.1.9"
inquirer = "^3.1.2"
scipy = "^1.10.0"
ipykernel = "^6.21.2"
jax = "^0.4.3"
jaxlib = "^0.4.3"
tensorflow-macos = "2.9.2"
tensorflow-metal = "0.5.0"
prwkv = "^0.2.0"
tiktoken = "^0.2.0"
wandb = "^0.13.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
tensorflow-m1 = ["tensorflow-macos==2.9.2", "tensorflow-metal==0.5.0"]