[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Anton Sokolchenko <wsevendays@gmail.com>"]
license = "private"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
psutil = "^5.9.4"
# pip install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu
accelerate = "^0.15.0"
bitsandbytes = "^0.35.4"
jupyter = "^1.0.0"
cython = "^0.29.32"
deepspeed = "^0.7.7"
huggingface-hub = "^0.11.1"
timm = "0.4.12"
happytransformer = "^2.4.1"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.2"
tensorflow-macos = "2.9.2"
tensorflow-metal = "0.5.0"
wandb = "^0.13.10"
minlora = {git = "https://github.com/cccntu/minLoRA.git"}
mwparserfromhell = "^0.6.4"
datasets = "^2.10.0"
memory-efficient-attention-pytorch = "^0.1.2"
pycrypto = "^2.6.1"
joblib = "^1.2.0"
langdetect = "^1.0.9"
tiktoken = "^0.3.1"
nltk = "^3.8.1"
multiprocess = "^0.70.14"
spacy = "^3.5.1"
sentencepiece = "^0.1.97"
transformers = "^4.27.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
alt-profanity-check = "^1.2.1"
pathos = "^0.3.0"
msgpack = "^1.0.5"
chardet = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
tensorflow-m1 = ["tensorflow-macos==2.9.2", "tensorflow-metal==0.5.0"]